--- a/server/package.json
+++ b/server/package.json
@@ -24,5 +24,8 @@
     "nodemon": "^3.1.0",
     "otp-generator": "^4.0.1",
     "razorpay": "^2.9.4"
-  }
+  },
+"engines": {
+  "node": "18.x"
+}
 }
